# terra-docker

./: .gitignore  .gitmodules  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  README.md  build.sh  build_all.sh  build_image.sh  build_images.sh  build_smoke_test_image.sh  cloudbuild.yaml  imageDirs.txt  mind.puml  temp.txt  updateVersions.sc
config/: community_images.json  conf.json  legacy_static_images.json  old_conf.json  pythonImages.txt  rImages.txt  static_images.json
dataproc-custom-images/: README.md  prepare-custom-leonardo-jupyter-dataproc-image.sh
gcsfuse/: Dockerfile  entrypoint.sh
hub/: Dockerfile
jenkins/: Jenkinsfile  (+2 more)
terra-base/: Dockerfile  README.md  jupyter_notebook_config.py  pyproject.toml
terra-base-jupyter/: Dockerfile  README.md  conda-environment.yml  conda_init.txt  ipython_config.py  jupyter_server_config.py  pyproject.toml  run-jupyter.sh
terra-base-jupyter/custom/: .eslintrc.js  README.md  extension_entry_jupyterlab.js  google_sign_in.js  jupyter_delocalize.py
terra-base-jupyter/tests/: smoke_test.py
terra-base/custom/: edit-mode.js  extension_entry_jupyter.js  jupyter_delocalize.py  jupyter_localize_extension.py  safe-mode.js
terra-base/scripts/: run-jupyter.sh
terra-base/scripts/extension/: install_jupyter_contrib_nbextensions.sh  jupyter_install_combined_extension.sh  jupyter_install_notebook_extension.sh  jupyter_install_server_extension.sh  jupyter_pip_install_combined_extension.sh  jupyter_pip_install_notebook_extension.sh  jupyter_pip_install_server_extension.sh
terra-base/scripts/kernel/: kernel_bootstrap.sh
(+176 files in other folders)
