[tool.poetry]
name = "terra-base-env"
version = "0.1.0"
description = ""
authors = ["LizBaldo <baldo@broadinstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anaconda = "^0.0.1.1"
notebook = "^7.0.4"
cookiecutter = "^2.3.0"
tornado = "^6.3.3"
python-datauri = "^2.1.0"
markupsafe = "^2.1.3"
nbconvert = "^7.8.0"
requests = "^2.31.0"
firecloud = "^0.16.35"
crcmod = "^1.7"
cromshell = "^2.0.0"
google-crc32c = "^1.5.0"
terra-notebook-utils = "^0.13.0"


[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"